[gd_scene format=3 uid="uid://bu2kr8cklk7p1"]

[ext_resource type="Script" uid="uid://cxloe57uv8mdb" path="res://scripts/planet.gd" id="1_pl6jd"]
[ext_resource type="Texture2D" uid="uid://dq7e88o0j4gth" path="res://Sprites/Planet-Sprites.png" id="2_pl6jd"]

[sub_resource type="SphereMesh" id="SphereMesh_bymth"]
radius = 5.0
height = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_01bk8"]
atlas = ExtResource("2_pl6jd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v88k3"]
atlas = ExtResource("2_pl6jd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vujfk"]
atlas = ExtResource("2_pl6jd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehv8q"]
atlas = ExtResource("2_pl6jd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6554r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_01bk8")
}],
"loop": true,
"name": &"BARREN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v88k3")
}],
"loop": true,
"name": &"ECUMENOPOLIS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vujfk")
}],
"loop": true,
"name": &"HEALTHY",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehv8q")
}],
"loop": true,
"name": &"METEOR",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dxv0p"]
resource_local_to_scene = true
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ysjy8"]
resource_local_to_scene = true
radius = 5.0

[node name="PlanetArea" type="Area2D" unique_id=1921216346]
collision_layer = 2
script = ExtResource("1_pl6jd")

[node name="MeshInstance2D" type="MeshInstance2D" parent="." unique_id=1057991627]
position = Vector2(3.8146973e-06, -7.6293945e-06)
mesh = SubResource("SphereMesh_bymth")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=2034651298]
texture_filter = 3
scale = Vector2(0.15982854, 0.15982854)
sprite_frames = SubResource("SpriteFrames_6554r")
animation = &"ECUMENOPOLIS"

[node name="GravityWell" type="CollisionShape2D" parent="." unique_id=1648343781]
scale = Vector2(0.6, 0.6)
shape = SubResource("CircleShape2D_dxv0p")

[node name="PlanetBody" type="RigidBody2D" parent="." unique_id=1215712948]
collision_layer = 4
gravity_scale = 0.0
lock_rotation = true
freeze = true

[node name="PlanetHitbox" type="CollisionShape2D" parent="PlanetBody" unique_id=1480384573]
shape = SubResource("CircleShape2D_ysjy8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="PlanetBody" unique_id=551592698]
rect = Rect2(-4, -4, 8, 8)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_entered" from="PlanetBody/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="PlanetBody/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
